--- a/index.html
+++ b/index.html
@@ -521,27 +521,40 @@
                 </a>
             </div>
             <div class="p-2">
-                <a href=" https://twitter.com/stevalberts">
+                <a href=" https://x.com/ogwalberts">
                     <div class="max-w-sm mx-auto flex p-6 bg-white rounded-lg shadow-lg">
                         <div class="flex-shrink-0 cursor-pointer">
                             <img class="h-12 w-12 " src="./img/twitter.png" alt="Twitter">
                         </div>
                         <div class="ml-6 pt-1 ">
                             <h4 class="text-xl text-gray-900 leading-tight ">Twitter</h4>
-                            <p class="text-base text-gray-600 leading-normal">@stevalberts</p>
+                            <p class="text-base text-gray-600 leading-normal">@ogwalberts</p>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="p-2">
-                <a href="https://www.instagram.com/stevalberts/">
+                <a href="https://www.linkedin.com/in/steven-albert-ogwal-50840912b/">
                     <div class="max-w-sm mx-auto flex p-6 bg-white rounded-lg shadow-lg">
                         <div class="flex-shrink-0 cursor-pointer">
-                            <img class="h-12 w-12 " src="./img/instgram.png" alt="Instgram">
+                            <img class="h-12 w-12 " src="./img/linkedin.png" alt="Twitter">
                         </div>
-                        <div class="ml-6 pt-1">
-                            <h4 class="text-xl text-gray-900 leading-tight ">Instagram</h4>
-                            <p class="text-base text-gray-600 leading-normal ">@stevalberts</p>
+                        <div class="ml-6 pt-1 ">
+                            <h4 class="text-xl text-gray-900 leading-tight ">LinkedIn</h4>
+                            <p class="text-base text-gray-600 leading-normal">Steven Albert Ogwal</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="p-2">
+                <a href="https://stackoverflow.com/users/10124696/steven-ogwal">
+                    <div class="max-w-sm mx-auto flex p-6 bg-white rounded-lg shadow-lg">
+                        <div class="flex-shrink-0 cursor-pointer">
+                            <img class="h-12 w-12 " src="./img/stackoverflow.png" alt="Twitter">
+                        </div>
+                        <div class="ml-6 pt-1 ">
+                            <h4 class="text-xl text-gray-900 leading-tight ">Stackoverflow</h4>
+                            <p class="text-base text-gray-600 leading-normal">@steven-ogwal</p>
                         </div>
                     </div>
                 </a>
@@ -563,7 +576,7 @@
 
         <p class="text-center p-4 text-gray-600 mt-10 ">
             Created by
-            <a class="border-b text-blue-500 " href="https://twitter.com/stevalberts " target="_blank ">@stevalberts</a>.
+            <a class="border-b text-blue-500 " href="https://twitter.com/ogwalberts " target="_blank ">@ogwalberts</a>.
         </p>
 </body>
 
