--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./img/stev.jpg">
     <meta name="author" content="Ogwal Steven Albert">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <link rel="canonical" href="https://stevalberts.github.io/">
 
