--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="">
-                        <a href="mailto:ogsteval@gmail.com" class="inline-block py-2 px-4 text-gray-700 bg-white hover:bg-gray-100 rounded-lg hover:bg-green-500 hover:text-white border border-green-500 uppercase tracking-wider">Hire.</a>
+                        <a href="mailto:ogsteval@gmail.com" class="inline-block py-2 px-4 text-gray-700 bg-white hover:bg-gray-100 rounded-lg hover:bg-green-500 hover:text-white border border-green-500 uppercase tracking-wider">Contact.</a>
                     </div>
                 </div>
             </div>
