--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                             Multiplatform Developer.
                         </p>
                         <p class="font-mono text-gray-600 md:text-xl md:px-18">
-                            (Mobile,Desktop,IoT,Hadoop,Cyber-Security)
+<!--                             (WebMobile,Desktop,IoT,Hadoop,Information-Security) -->
+                            (UI/UX,Software,IoT,Hadoop,ML,Infosec)
                         </p>
                         <p class="font-sans text-gray-600 md:text-xl md:px-18 p-4 ">
                             I’m a self-motivated, flexible and dedicated individual with strong analytical skills and technical experience/skills in software and application development, user support and operations. Able to deliver in a timely fashion with minimum supervision.
