--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                             <div class="w-10 h-10 rounded-full bg-purple-800 mb-4 mx-auto "></div>
                                             <div class="h-2 rounded-full bg-gray-200 "></div>
                                             <p class="font-mono text-gray-600 md:text-xl md:px-18 ">
-                                                Security
+                                                Infosec
                                             </p>
                                         </div>
                                     </div>
@@ -165,7 +165,7 @@
                                             <div class="w-10 h-10 rounded-full bg-blue-800 mb-4 mx-auto "></div>
                                             <div class="h-2 rounded-full bg-gray-200 "></div>
                                             <p class="font-mono text-gray-600 md:text-xl md:px-18 ">
-                                                Desktop
+                                                ML
                                             </p>
                                         </div>
                                     </div>
