--- a/index.html
+++ b/index.html
@@ -176,11 +176,10 @@
                                             <div class="h-8 w-8 rounded-full bg-gray-200 mr-4 "></div>
                                             <div>
                                                 <p class="font-mono text-gray-600 md:text-xl md:px-18 ">
-                                                    Dart/Swift/Kotlin
+                                                    Dart, Swift, Kotlin
                                                 </p>
                                                 <div class="h-2 w-16 bg-gray-200 mb-1 rounded-full "></div>
                                                 <div class="h-2 w-10 bg-gray-100 rounded-full "></div>
-
                                             </div>
                                         </div>
                                     </div>
@@ -189,7 +188,7 @@
                                             <div class="h-8 w-8 rounded-full bg-gray-200 mr-4 "></div>
                                             <div>
                                                 <p class="font-mono text-gray-600 md:text-xl md:px-18 ">
-                                                    Java/J2EE, PHP, NodeJS, TS
+                                                    Java, PHP, NodeJS, TS
                                                 </p>
                                                 <div class="h-2 w-16 bg-gray-200 mb-1 rounded-full "></div>
                                                 <div class="h-2 w-10 bg-gray-100 rounded-full "></div>
@@ -204,7 +203,7 @@
                                             <div class="h-8 w-8 rounded-full bg-gray-200 mr-4 "></div>
                                             <div>
                                                 <p class="font-mono text-gray-600 md:text-xl md:px-18 ">
-                                                    Python, R
+                                                    Python, R, Assembly
                                                 </p>
                                                 <div class="h-2 w-16 bg-gray-200 mb-1 rounded-full "></div>
                                                 <div class="h-2 w-10 bg-gray-100 rounded-full "></div>
@@ -216,7 +215,7 @@
                                             <div class="h-8 w-8 rounded-full bg-gray-200 mr-4 "></div>
                                             <div>
                                                 <p class="font-mono text-gray-600 md:text-xl md:px-18 ">
-                                                    C, C++, C#, F#
+                                                    C, C++, C#, F#, Objective-C
                                                 </p>
                                                 <div class="h-2 w-16 bg-gray-200 mb-1 rounded-full "></div>
                                                 <div class="h-2 w-10 bg-gray-100 rounded-full "></div>
