--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img class="h-1/2 w-1/2 sm:w-auto md:w-1/4 lg:w-1/6 sm:l-auto md:l-1/4 lg:l-1/6 rounded-full mx-auto" src="./img/stev.jpg">
                     <div class="relative w-full md:max-w-2xl md:mx-auto text-center">
                         <h1 class="font-bold text-gray-700 text-xl sm:text-2xl md:text-5xl leading-tight ">
-                            Ogwal Steven Albert
+                            StevalbertS.
                         </h1>
                         <p class="text-gray-600 md:text-xl md:px-18">
                             Multiplatform Developer.
@@ -96,6 +96,7 @@
                 <div class="h-5 w-5 rounded-full bg-blue-500 absolute top-0 left-0 -ml-32 mt-12 " style="z-index: -1; "></div>
 
                 <div class="h-10 bg-white rounded-t-lg border-b border-gray-100 "></div>
+                
                 <h5 class="font-bold text-gray-700 md:text-4xl text-center leading-tight ">
                     Skills
                 </h5>
@@ -188,7 +189,7 @@
                                             <div class="h-8 w-8 rounded-full bg-gray-200 mr-4 "></div>
                                             <div>
                                                 <p class="font-mono text-gray-600 md:text-xl md:px-18 ">
-                                                    Java, PHP, NodeJS, TS
+                                                    Objective-C, PHP, NodeJS, TS
                                                 </p>
                                                 <div class="h-2 w-16 bg-gray-200 mb-1 rounded-full "></div>
                                                 <div class="h-2 w-10 bg-gray-100 rounded-full "></div>
@@ -215,7 +216,7 @@
                                             <div class="h-8 w-8 rounded-full bg-gray-200 mr-4 "></div>
                                             <div>
                                                 <p class="font-mono text-gray-600 md:text-xl md:px-18 ">
-                                                    C, C++, C#, F#, Objective-C
+                                                    C, C++, C#, F#
                                                 </p>
                                                 <div class="h-2 w-16 bg-gray-200 mb-1 rounded-full "></div>
                                                 <div class="h-2 w-10 bg-gray-100 rounded-full "></div>
@@ -281,8 +282,6 @@
                 </div>
             </div>
             <!--another box on small screen -->
-
-
             <div class="px-4 md:hidden ">
                 <div class="-mt-10 max-w-4xl mx-auto bg-white shadow-lg relative z-20 " style="border-radius: 20px; ">
                     <div class="h-10 bg-white rounded-t-lg border-b border-gray-100 "></div>
