--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             StevalbertS.
                         </h1>
                         <p class="text-gray-600 md:text-xl md:px-18">
-                            Multiplatform Developer.
+                            Succint Multiplatform Developer
                         </p>
                         <p class="font-mono text-gray-600 md:text-xl md:px-18">
 <!--                             (WebMobile,Desktop,IoT,Hadoop,Information-Security) -->
